Fix UI overflow for error details on draft

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
@@ -86,6 +86,10 @@ strong {
   font-weight: bolder;
 }
 
+.mat-column-details {
+  word-break: break-word;
+}
+
 .new-formatting-options-notice {
   margin-top: 7px;
 }
